# zennai-browser

./: README.md
.github/workflows/: build-windows.yml
args/: windows-release.gn
branding/: BRANDING
strings/: chromium_strings.grd  settings_chromium_strings.grdp
